tests/fn3.dora
// error: 2

fn main() -> int {
  return 2;
}
